--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "cheeseburger-menu": "^0.0.13",
     "dotenv": "^8.2.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "0.33.0",
     "react-dom": "^16.12.0",
