--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "0.33.0",
     "react-dom": "^16.12.0",
+    "react-form-validator-core": "^0.6.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
