--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "cheeseburger-menu": "^0.0.13",
     "dotenv": "^8.2.0",
+    "formik": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "0.33.0",
@@ -13,7 +14,8 @@
     "react-form-validator-core": "^0.6.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
