--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cheeseburger-menu": "^0.0.13",
+    "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
     "formik": "^2.0.8",
     "jwt-decode": "^2.2.0",
