--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "0.33.0",
+    "react-datepicker": "^2.14.0",
     "react-dom": "^16.12.0",
     "react-form-validator-core": "^0.6.4",
     "react-router-bootstrap": "^0.25.0",
