--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-select": "^3.1.0",
     "react-to-print": "^2.6.3",
     "yup": "^0.27.0"
   },
